# projeto-pipeline-ELT-engenharia-supabase-dbt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMMIT_GUIDELINES.md  README.md  docker-compose.yml  pyproject.toml
.llm/: database.md
.llm/case-01-dashboard/: .env.example  PRD-dashboard.md  app.py  db.py  feature.md  filters.py  pyproject.toml  requirements.txt  utils.py
.llm/case-01-dashboard/pages/: clientes.py  pricing.py  vendas.py
.llm/case-01-dashboard/tests/: test_app_bootstrap.py  test_db.py  test_filters.py  test_utils.py  test_vendas_view.py
.llm/case-01-dashboard/views/: clientes.py  pricing.py  vendas.py
.llm/case-02-telegram/: PRD-agente-relatorios.md  agente.py  bot.py  db.py  pyproject.toml  requirements.txt
assets/diagramas/: mockup-pipeline.html
case-01-dashboard/: app.py  db.py  utils.py
case-01-dashboard/tests/: test_db.py  test_utils.py
docs/superpowers/plans/: 2026-04-28-dbt-gold-dimensional.md  2026-04-28-reorganizacao-elt.md  2026-04-29-dbt-silver-gold-qualidade-enriquecimento.md  2026-04-30-dashboard-local-first-hardening.md  2026-04-30-dashboard-streamlit.md  2026-05-01-painel-filtros-unificado.md  2026-05-04-readme-rewrite.md  2026-05-07-case-02-telegram-refactor.md
docs/superpowers/specs/: 2026-04-28-dbt-gold-dimensional-design.md  2026-04-28-reorganizacao-elt-design.md  2026-04-29-dbt-silver-gold-qualidade-enriquecimento-design.md  (+5 more)
ecommerce/: PRD.md
extract_load/: CLAUDE.md  Dockerfile  pyproject.toml
extract_load/src/extract_load/: __init__.py  __main__.py  config.py  extract.py  load.py
extract_load/tests/: test_config.py  test_extract.py  test_load.py
scripts/: run-pipeline.sh
transform/: CLAUDE.md  Dockerfile  PRD-dbt.md  dbt_project.yml  profiles.yml  pyproject.toml
transform/models/: _sources.yml
transform/models/gold/: _gold_models.yml
transform/models/gold/customer_success/: clientes_segmentacao.sql
transform/models/gold/dimensional/: gold_dim_clientes.sql  gold_dim_concorrentes.sql  gold_dim_datas.sql  gold_dim_produtos.sql  gold_fct_precos_competidores.sql  gold_fct_vendas.sql
transform/models/gold/marts/customer_success/: gold_customer_success_clientes_segmentacao.sql
transform/models/gold/marts/pricing/: gold_pricing_precos_competitividade.sql
transform/models/gold/marts/sales/: gold_sales_vendas_temporais.sql
transform/models/gold/pricing/: precos_competitividade.sql
transform/models/gold/sales/: vendas_temporais.sql
transform/models/silver/: _silver_models.yml  silver_clientes.sql  silver_preco_competidores.sql  silver_produtos.sql  silver_vendas.sql
