[project]
name = "projeto-pipeline-elt"
version = "0.1.0"
description = "Pipeline ELT: S3 -> PostgreSQL -> dbt (Bronze/Silver/Gold)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["extract_load", "transform"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

# ---- ruff ----
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["transform/target", "transform/dbt_packages", "transform/logs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["extract_load/tests"]
addopts = "-ra --strict-markers"
