[project]
name = "extract_load"
version = "0.1.0"
description = "Pipeline EL: S3 -> PostgreSQL raw"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.4",
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extract_load"]
