[project]
name = "transform"
version = "0.1.0"
description = "Pipeline T: dbt transformations (Bronze/Silver/Gold)"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.8,<1.10",
    "dbt-postgres>=1.8,<1.10",
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
