[project]
name = "case-01-dashboard"
version = "0.1.0"
description = "Dashboard Streamlit para consumo dos marts Gold do e-commerce"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.32.0",
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
