[project]
name = "case-02-telegram"
version = "0.1.0"
description = "Agente Telegram com Claude API para relatórios de e-commerce"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "python-telegram-bot>=20",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "tabulate>=0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
